--- a/bookinfo/0-defaults/details.yaml
+++ b/bookinfo/0-defaults/details.yaml
@@ -1,4 +1,16 @@
 apiVersion: v1
+kind: Service
+metadata:
+  name: details
+spec:
+  selector:
+    app: details
+  ports:
+    - protocol: TCP
+      port: 9080
+      targetPort: 9080
+---
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: details
@@ -35,3 +47,10 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 9080
+        resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
