--- a/bookinfo/0-defaults/productpage.yaml
+++ b/bookinfo/0-defaults/productpage.yaml
@@ -1,4 +1,16 @@
 apiVersion: v1
+kind: Service
+metadata:
+  name: productpage
+spec:
+  selector:
+    app: productpage
+  ports:
+    - protocol: TCP
+      port: 9090
+      targetPort: 9090
+---
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: productpage
@@ -25,7 +37,7 @@ spec:
         version: v1
       annotations:
         consul.hashicorp.com/connect-inject: "true"
-        consul.hashicorp.com/connect-service-upstreams: "bookinfo:9080"
+        consul.hashicorp.com/transparent-proxy: "true"
         prometheus.io/scrape: "true"
         prometheus.io/port: "20200"
     spec:
@@ -37,16 +49,23 @@ spec:
         imagePullPolicy: IfNotPresent
         env:
         - name: REVIEWS_HOSTNAME
-          value: "127.0.0.1"
+          value: "reviews.default"
         - name: RATINGS_HOSTNAME
-          value: "127.0.0.1"
+          value: "ratings.default"
         - name: DETAILS_HOSTNAME
-          value: "127.0.0.1"
+          value: "details.default"
         ports:
         - containerPort: 9090
         volumeMounts:
         - name: tmp
           mountPath: /tmp
+        resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
       volumes:
       - name: tmp
         emptyDir: {}
