--- a/bookinfo/0-defaults/reviews.yaml
+++ b/bookinfo/0-defaults/reviews.yaml
@@ -1,4 +1,16 @@
 apiVersion: v1
+kind: Service
+metadata:
+  name: reviews
+spec:
+  selector:
+    app: reviews
+  ports:
+    - protocol: TCP
+      port: 9090
+      targetPort: 9090
+---
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: reviews
@@ -47,6 +59,13 @@ spec:
         - name: conf
           mountPath: /opt/ibm/wlp/usr/servers/defaultServer/server.xml
           subPath: server.xml
+        resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
       volumes:
       - name: wlp-output
         emptyDir: {}
@@ -102,6 +121,13 @@ spec:
         - name: conf
           mountPath: /opt/ibm/wlp/usr/servers/defaultServer/server.xml
           subPath: server.xml
+        resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
       volumes:
       - name: wlp-output
         emptyDir: {}
@@ -157,6 +183,13 @@ spec:
         - name: conf
           mountPath: /opt/ibm/wlp/usr/servers/defaultServer/server.xml
           subPath: server.xml
+        resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
       volumes:
       - name: wlp-output
         emptyDir: {}
@@ -168,7 +201,6 @@ spec:
           items:
           - key: server.xml
             path: server.xml
-          
 ---
 apiVersion: v1
 kind: ConfigMap
