--- a/bookinfo/0-defaults/productpage.yaml
+++ b/bookinfo/0-defaults/productpage.yaml
@@ -2,13 +2,20 @@ apiVersion: v1
 kind: Service
 metadata:
   name: productpage
+  labels:
+    prometheus.io/scrape: "true"
 spec:
   selector:
     app: productpage
   ports:
     - protocol: TCP
+      name: http
       port: 9090
       targetPort: 9090
+    - protocol: TCP
+      name: metrics
+      port: 20200
+      targetPort: 20200
 ---
 apiVersion: v1
 kind: ServiceAccount
