--- a/bookinfo/0-defaults/ratings.yaml
+++ b/bookinfo/0-defaults/ratings.yaml
@@ -2,13 +2,20 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ratings
+  labels:
+    prometheus.io/scrape: "true"
 spec:
   selector:
     app: ratings
   ports:
     - protocol: TCP
+      name: http
       port: 9080
       targetPort: 9080
+    - protocol: TCP
+      name: metrics
+      port: 20200
+      targetPort: 20200
 ---
 apiVersion: v1
 kind: ServiceAccount
