--- a/terminating-gateway/terminating-gateway.yaml
+++ b/terminating-gateway/terminating-gateway.yaml
@@ -5,4 +5,14 @@ metadata:
 spec:
   services:
     - name: example-https
+      namespace: external
       caFile: /etc/ssl/cert.pem
+---
+apiVersion: consul.hashicorp.com/v1alpha1
+kind: Mesh
+metadata:
+  name: mesh
+  namespace: default
+spec:
+  transparentProxy:
+    meshDestinationsOnly: true
