--- a/admin-partitions/eks-blue/export-backend.yaml
+++ b/admin-partitions/eks-blue/export-backend.yaml
@@ -1,5 +1,15 @@
 ---
 apiVersion: consul.hashicorp.com/v1alpha1
+kind: ProxyDefaults
+metadata:
+  name: global
+spec:
+  meshGateway:
+    mode: local
+  config:
+    protocol: http
+---
+apiVersion: consul.hashicorp.com/v1alpha1
 kind: ServiceIntentions
 metadata:
   name: backend
