--- a/admin-partitions/eks-red/export-frontend.yaml
+++ b/admin-partitions/eks-red/export-frontend.yaml
@@ -1,3 +1,14 @@
+---
+apiVersion: consul.hashicorp.com/v1alpha1
+kind: ProxyDefaults
+metadata:
+  name: global
+spec:
+  meshGateway:
+    mode: local
+  config:
+    protocol: http
+---
 apiVersion: consul.hashicorp.com/v1alpha1
 kind: ExportedServices
 metadata:
