Adds support for Consul Gateway API

--- a/admin-partitions/eks-blue/export-frontend.yaml
+++ b/admin-partitions/eks-blue/export-frontend.yaml
@@ -12,9 +12,9 @@ spec:
 apiVersion: consul.hashicorp.com/v1alpha1
 kind: ExportedServices
 metadata:
-  name: eks-red
+  name: default
 spec:
   services:
   - name: mesh-gateway
     consumers:
-    - partition: eks-blue
+    - partition: eks-red
