--- a/transparent-proxy/api-gateway.yaml
+++ b/transparent-proxy/api-gateway.yaml
@@ -2,7 +2,7 @@
 apiVersion: gateway.networking.k8s.io/v1alpha2
 kind: HTTPRoute
 metadata:
-  name: frontend-route
+  name: frontend-tp-route
 spec:
   parentRefs:
   - name: example-gateway
@@ -10,9 +10,9 @@ spec:
   - matches:
     - path:
         type: Exact
-        value: /frontend-adm
+        value: /frontend-tp
     backendRefs:
     - kind: Service
-      name: frontend
+      name: frontend-tp
       namespace: default
       port: 9090
