--- a/virtualservice/eks-blue/app-frontend.yaml
+++ b/virtualservice/eks-blue/app-frontend.yaml
@@ -1,11 +1,11 @@
-# Service to expose bar
+# Service to expose foo
 apiVersion: v1
 kind: Service
 metadata:
-  name: bar
+  name: foo
 spec:
   selector:
-    app: bar
+    app: foo
   ports:
   - name: http
     protocol: TCP
@@ -15,32 +15,32 @@ spec:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: bar
+  name: foo
 ---
-# bar
+# foo
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: bar
+  name: foo
   labels:
-    app: bar
+    app: foo
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: bar
+      app: foo
   template:
     metadata:
       labels:
-        app: bar
+        app: foo
       annotations:
         "consul.hashicorp.com/connect-inject": "true"
         "consul.hashicorp.com/transparent-proxy": "false"
-        "consul.hashicorp.com/connect-service-upstreams": "foo-dc2.default:9091:dc1"
+        "consul.hashicorp.com/connect-service-upstreams": "bar-dc2.default:9091:dc1"
     spec:
-      serviceAccountName: bar
+      serviceAccountName: foo
       containers:
-      - name: bar
+      - name: foo
         image: nicholasjackson/fake-service:v0.22.4
         ports:
         - containerPort: 9090
@@ -50,7 +50,7 @@ spec:
         - name: "UPSTREAM_URIS"
           value: "http://localhost:9091"
         - name: "NAME"
-          value: "bar"
+          value: "foo"
         - name: "MESSAGE"
           value: "Hello World"
         - name: "HTTP_CLIENT_KEEP_ALIVES"
@@ -66,6 +66,6 @@ spec:
 apiVersion: consul.hashicorp.com/v1alpha1
 kind: ServiceDefaults
 metadata:
-  name: bar
+  name: foo
 spec:
   protocol: "http"
