Adds app-aware intention

--- a/tracing/service-intentions.yaml
+++ b/tracing/service-intentions.yaml
@@ -19,4 +19,10 @@ spec:
     name: bird-frontend
   sources:
   - name: ingress-gateway
-    action: allow
+    permissions:
+    - http:
+        pathPrefix: /admin
+      action: deny
+    - http:
+        pathPrefix: /
+      action: allow
