--- a/tracing/backend.yaml
+++ b/tracing/backend.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: bird-backend
+  labels:
+    prometheus.io/scrape: "true"
 spec:
   selector:
     app: bird-backend
@@ -11,6 +13,10 @@ spec:
     protocol: TCP
     port: 7000
     targetPort: 7000
+  - name: metrics
+    protocol: TCP
+    port: 20200
+    targetPort: 20200
 ---
 apiVersion: v1
 kind: ServiceAccount
