Monitoring: Makes use of corrected Namespaces for Vault and Consul

--- a/monitoring/pod-monitor-consul-client.yaml
+++ b/monitoring/pod-monitor-consul-client.yaml
@@ -23,7 +23,7 @@ spec:
         #keyFile: /etc/prometheus/secrets/vault-tls/server.key
   namespaceSelector:
     matchNames:
-      - default
+      - consul
   selector:
     matchLabels:
       app: consul
