--- a/monitoring/service-monitor-envoy.yaml
+++ b/monitoring/service-monitor-envoy.yaml
@@ -13,6 +13,7 @@ spec:
   namespaceSelector:
     matchNames:
       - default
+      - consul
   selector:
     matchLabels:
       prometheus.io/scrape: "true"
