--- a/monitoring/service-monitor-vault.yaml
+++ b/monitoring/service-monitor-vault.yaml
@@ -12,7 +12,7 @@ spec:
     port: http
   namespaceSelector:
     matchNames:
-    - default
+    - vault
   selector:
     matchLabels:
       app.kubernetes.io/name: vault
