--- a/monitoring/service-consul-gateway-metrics.yaml
+++ b/monitoring/service-consul-gateway-metrics.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: consul-mesh-gateway-metrics
+  namespace: consul
   labels:
     prometheus.io/scrape: "true"
 spec:
@@ -18,6 +19,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: consul-ingress-gateway-metrics
+  namespace: consul
   labels:
     prometheus.io/scrape: "true"
 spec:
@@ -34,6 +36,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: consul-terminating-gateway-metrics
+  namespace: consul
   labels:
     prometheus.io/scrape: "true"
 spec:
