--- a/api-gateway/example-gateway.yaml
+++ b/api-gateway/example-gateway.yaml
@@ -3,12 +3,18 @@ apiVersion: gateway.networking.k8s.io/v1alpha2
 kind: Gateway
 metadata:
   name: example-gateway
+  namespace: default
 spec:
-  gatewayClassName: consul-api-gateway
+  gatewayClassName: example-gateway-class
   listeners:
   - protocol: HTTP
-    port: 9090
+    port: 80
     name: http
+    hostname: '*.eu-north-1.elb.amazonaws.com'
     allowedRoutes:
       namespaces:
-        from: Same
+        # from: Same
+        from: Selector
+        selector:
+          matchLabels:
+            kubernetes.io/metadata.name: default
