--- a/bookinfo/1-ingress/api-gateway.yaml
+++ b/bookinfo/1-ingress/api-gateway.yaml
@@ -3,9 +3,11 @@ apiVersion: gateway.networking.k8s.io/v1alpha2
 kind: HTTPRoute
 metadata:
   name: productpage-route
+  namespace: default
 spec:
   parentRefs:
   - name: example-gateway
+    namespace: default
   rules:
   - matches:
     - path:
@@ -16,3 +18,18 @@ spec:
       name: productpage
       namespace: default
       port: 9090
+---
+apiVersion: gateway.networking.k8s.io/v1alpha2
+kind: ReferencePolicy
+metadata:  
+  name: productpage-route
+  namespace: default
+spec:  
+  from:  
+  - group: gateway.networking.k8s.io
+    kind: HTTPRoute
+    namespace: default
+  to:
+  - group: ""
+    kind: Service
+    name: productpage
