--- a/bookinfo/1-ingress/api-gateway.yaml
+++ b/bookinfo/1-ingress/api-gateway.yaml
@@ -20,7 +20,7 @@ spec:
       port: 9090
 ---
 apiVersion: gateway.networking.k8s.io/v1alpha2
-kind: ReferencePolicy
+kind: ReferenceGrant
 metadata:  
   name: productpage-route
   namespace: default
