Adjusts Vault Prometheus configuration to use TLS

--- a/monitoring/service-monitor-vault.yaml
+++ b/monitoring/service-monitor-vault.yaml
@@ -9,7 +9,13 @@ spec:
   endpoints:
   - interval: 10s
     path: /v1/sys/metrics
-    port: http
+    port: https
+    scheme: https
+    tlsConfig:
+      insecureSkipVerify: true
+      #caFile: /etc/prometheus/secrets/vault-tls/ca.crt
+      #certFile: /etc/prometheus/secrets/vault-tls/server.crt
+      #keyFile: /etc/prometheus/secrets/vault-tls/server.key
   namespaceSelector:
     matchNames:
     - vault
