--- a/api-gateway/example-gateway.yaml
+++ b/api-gateway/example-gateway.yaml
@@ -1,11 +1,11 @@
 ---
-apiVersion: gateway.networking.k8s.io/v1alpha2
+apiVersion: gateway.networking.k8s.io/v1beta1
 kind: Gateway
 metadata:
   name: example-gateway
   namespace: default
 spec:
-  gatewayClassName: example-gateway-class
+  gatewayClassName: consul
   listeners:
   - protocol: HTTP
     port: 80
