--- a/bookinfo/1-ingress/api-gateway.yaml
+++ b/bookinfo/1-ingress/api-gateway.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: gateway.networking.k8s.io/v1alpha2
+apiVersion: gateway.networking.k8s.io/v1beta1
 kind: HTTPRoute
 metadata:
   name: productpage-route
@@ -19,7 +19,7 @@ spec:
       namespace: default
       port: 9090
 ---
-apiVersion: gateway.networking.k8s.io/v1alpha2
+apiVersion: gateway.networking.k8s.io/v1beta1
 kind: ReferenceGrant
 metadata:  
   name: productpage-route
@@ -33,3 +33,17 @@ spec:
   - group: ""
     kind: Service
     name: productpage
+---
+apiVersion: consul.hashicorp.com/v1alpha1
+kind: ServiceIntentions
+metadata:
+  name: example-gateway-to-productpage
+  namespace: default
+spec:
+  destination:
+    name: productpage
+    namespace: default
+  sources:
+    - name: example-gateway
+      namespace: default
+      action: allow
